# pyss

./: .gitignore  ISSUES.md  README.md  TODO.md  pyproject.toml  uitest.py
pyss/: __main__.py
pyss/app/: __main__.py  app.py  draw_piece.py  theme.py  utils.py
pyss/app/assets/themes/: default.yml  test.yml
pyss/game/: __main__.py  board.py  depthtree.py  diff.txt  notation.py  piece.py
pyss/game/board/: __init__.py  base.py  playable.py
pyss/game/board/depth/: __init__.py  depth.py  tree.py
pyss/game/data/: piece_dict.yaml
pyss/tests/: test_ai.py  test_board.py  test_boardtree.py  test_notation.py  test_piece.py  test_theme.py
